2003-12-19  Werner Koch  <wk@gnupg.org>

	* cms.c (build_signed_data_header): Fixed silly ==/= bug.

2003-12-09  Werner Koch  <wk@gnupg.org>

	* cms.c (ksba_cms_set_sig_val): Fixed a code cleanup I did on Nov
	25 and led to bad signature creation.  Unfortunatley gpgsm has
	currently no real regression tests.  BTW, why the hell didn't I
	wrote an entry for that cleanup.

2003-11-28  Werner Koch  <wk@gnupg.org>

	* ocsp.h, ocsp.c: New.
	* ksba.h (ksba_status_t, ksba_ocsp_response_status_t): New.
	(ksba_ocsp_t): New.

2003-11-25  Werner Koch  <wk@gnupg.org>

	* ksba.h: Added a few more CRL reason codes.

2003-11-21  Werner Koch  <wk@gnupg.org>

	* oid.c (ksba_oid_from_str): Changed RBUF to unsigned char* and
	changed all callers to avoid incompatible pointer warnings.

2003-11-20  Werner Koch  <wk@gnupg.org>

	* cert.c (_ksba_cert_get_issuer_dn_ptr): New.
	(_ksba_cert_get_public_key_ptr): New.
	(_ksba_cert_get_serial_ptr): New.

	* util.c (_ksba_hash_buffer): New.
	(ksba_set_hash_buffer_function): New.

	* cms.c: Include sexp-parse.h.
	(ksba_cms_set_sig_val): Use snext and smatch instead of open
	coding it.

	* sexp-parse.h: New. Taken from GnuPG 1.9.

2003-11-18  Werner Koch  <wk@gnupg.org>

	* reader.c (ksba_reader_read): Return GPG_ERR_EOF and not -1.

2003-11-17  Werner Koch  <wk@gnupg.org>

	* cert.c (get_name, ksba_cert_get_extension): Return GPG_ERR_EOF
	and not just -1.
	* ber-decoder.c (_ksba_ber_decoder_decode): Ditto.

2003-11-14  Werner Koch  <wk@gnupg.org>

	* cms.c (write_encrypted_cont): Fixed test on EOF.
	* cert.c (ksba_cert_is_ca, ksba_cert_get_cert_policies) 
	(ksba_cert_get_auth_key_id): Ditto.
	* ber-decoder.c (_ksba_ber_decoder_dump) 
	(_ksba_ber_decoder_decode): Ditto.

2003-11-13  Werner Koch  <wk@gnupg.org>

	* ber-decoder.c (eof_or_error): Replaced READ_ERROR with a system
	provided error.
	* crl.c (parse_to_next_update): Ditto.
	* cms-parser.c (parse_cms_version): Ditto.
	(_ksba_cms_parse_signed_data_part_1): 